--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
     <h1>Press f12</h1>
     <a href="">F12</a>
     <p></p>
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
